@@ -7,27 +7,29 @@
     <version>0.1-SNAPSHOT</version>
     <name>recognizer</name>
     <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>1.9</maven.compiler.source>
-        <maven.compiler.target>1.9</maven.compiler.target>
+        <assertj-core.version>3.9.0</assertj-core.version>
+        <commons-io.version>2.6</commons-io.version>
+        <commons-lang.version>3.7</commons-lang.version>
+        <guava.version>23.6-jre</guava.version>
+        <jackson.version>2.9.3</jackson.version>
         <java.version>1.9</java.version>
-        <maven-jar-plugin.version>3.0.2</maven-jar-plugin.version>
+        <json-path.version>2.3.0</json-path.version>
+        <json-unit-fluent.version>1.28.1</json-unit-fluent.version>
         <junit.version>4.12</junit.version>
         <kafka.version>0.8.1.1</kafka.version>
         <kafka-clients.version>0.9.0.0</kafka-clients.version>
-        <slf4j.version>1.7.5</slf4j.version>
-        <jackson.version>2.9.3</jackson.version>
-        <commons-io.version>2.6</commons-io.version>
-        <commons-lang.version>3.7</commons-lang.version>
-        <mockito.version>2.8.9</mockito.version>
-        <assertj-core.version>3.9.0</assertj-core.version>
-        <unirest-java.version>1.4.9</unirest-java.version>
         <log4j.version>2.7</log4j.version>
-        <guava.version>23.6-jre</guava.version>
-        <powermock.version>1.7.1</powermock.version>
-        <json-path.version>2.3.0</json-path.version>
-        <json-unit-fluent.version>1.28.1</json-unit-fluent.version>
+        <maven.compiler.source>1.9</maven.compiler.source>
+        <maven.compiler.target>1.9</maven.compiler.target>
+        <maven-jar-plugin.version>3.0.2</maven-jar-plugin.version>
         <mavens-surefire-plugin.version>2.18.1</mavens-surefire-plugin.version>
+        <mockito.version>2.8.9</mockito.version>
+        <mockito.version>2.21.0</mockito.version>
+        <mockserver.version>5.3.0</mockserver.version>
+        <powermock.version>1.7.1</powermock.version>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <slf4j.version>1.7.5</slf4j.version>
+        <unirest-java.version>1.4.9</unirest-java.version>
     </properties>
     <dependencies>
 
@@ -58,6 +60,21 @@
             <groupId>net.javacrumbs.json-unit</groupId>
             <artifactId>json-unit-fluent</artifactId>
             <version>${json-unit-fluent.version}</version>
+            <scope>test</scope>
+        </dependency>
+
+
+        <!-- mock server -->
+        <dependency>
+            <groupId>org.mock-server</groupId>
+            <artifactId>mockserver-netty</artifactId>
+            <version>${mockserver.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.mock-server</groupId>
+            <artifactId>mockserver-client-java</artifactId>
+            <version>${mockserver.version}</version>
             <scope>test</scope>
         </dependency>
 
@@ -202,8 +219,8 @@
                         <!-- java 9 modules -->
                         <argLine>
                             --add-modules java.xml.bind
-                            --illegal-access=deny
                             --add-opens java.base/java.lang=ALL-UNNAMED
+                            --add-exports java.base/jdk.internal.misc=ALL-UNNAMED
                         </argLine>
                         <forkMode>once</forkMode>
                     </configuration>
